# Ollama-Gui

./: .prettierrc  LICENSE  README.md  amplify.yml  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/actions/: publish-artifacts.yaml
.github/actions/publish-artifacts/: action.yaml  action.yml
.github/workflows/: build-and-deploy.yml  build-and-deploy.yml   release.yml
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: chat.tsx  header.tsx  helper.ts  index.tsx  input-prompt.tsx  migrator.tsx  sidebar.tsx
src/app/parts/: ConfirmChatClear.tsx  ConfirmSwitchModel.tsx  ConversationBlock.tsx  IntroCard.tsx  SelectModel.tsx  SideInfoSheet.tsx  Sidebar.tsx  chat-header.tsx  chat-input.tsx  chat-message.tsx  chat-window.tsx  collections-panel.tsx  collections-utils.ts  data-parser.ts  database-connection-manager.tsx  model-download-dialog.tsx  modelfile-editor.tsx  models-manager.tsx  ollama-status.tsx  onboarding.tsx  query-results-table.tsx  response-metrics.tsx  select-default-model.tsx  settings-screen.tsx  settings-wrapper.tsx  sidebar.tsx  (+5 more)
src/components/: ConfirmModal.tsx  error-boundry.tsx  markdown.tsx  mode-toggle.tsx  theme-provider.tsx
src/core/: actions.ts  core.ts  database-actions.ts  helper.ts  index.ts  local-database.ts  types.ts  utils.ts
src/hooks/: IsRunning.tsx  index.ts  use-event.ts  use-migration.ts  useRunningPoll.tsx
src/parts/: chat-header.tsx  sidebar.tsx
(+40 files in other folders)
