[package]
name = "ollama-chat"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ollama_chat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-opener = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"


[dependencies.tauri-plugin-sql]
features = ["sqlite"] 
version = "2.1"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-native-tls", "sqlite", "postgres"]

[target.'cfg(windows)'.dependencies.libsqlite3-sys]
version = "0.28"
features = ["bundled"]

